--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,22 +5,37 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.3.2 <4.0.0'
 dependencies:
+  flutter:
+   sdk: flutter
   fluttertoast: ^8.0.8
   shared_preferences: ^2.2.2
-  flutter:
-    sdk: flutter
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
+  firebase_database: ^10.5.4
+  http: ^1.2.1
+  google_sign_in: ^6.2.1
   geolocator: ^11.0.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   path_provider: ^2.0.9
   sqflite: ^2.0.0+4
   csv: ^6.0.0
-  intl: ^0.19.0
+  intl: ^0.18.1
   logger: ^2.2.0
   cupertino_icons: ^1.0.6
+  provider: ^6.1.2
+  font_awesome_flutter: ^10.7.0
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+   sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon/fondo.jpg
+    - assets/icon/bares1.png
